test/compiler-errors/samples/component-slot-duplicate-error-4/_config.js
export default {
	error: 'Found elements without slot attribute when using slot="default"'
};
